# petals

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: ONBOARDING.md  p2p-petals-architecture.html
docs/e2e-reports/: summary_20260319_233520.json  summary_20260319_233610.json  summary_20260320_000036.json  summary_20260320_000252.json  test_agent_simple_task_20260319_233520.json  test_agent_simple_task_20260319_233610.json  test_agent_simple_task_20260320_000040.json  test_agent_simple_task_20260320_000255.json  test_agent_with_tools_20260319_233520.json  test_agent_with_tools_20260319_233610.json  test_agent_with_tools_20260320_000051.json  test_agent_with_tools_20260320_000307.json  test_chat_completion_20260319_233519.json  test_chat_completion_20260319_233610.json  test_chat_completion_20260320_000036.json  test_chat_completion_20260320_000249.json  test_custom_endpoint_poem_20260319_233520.json  test_custom_endpoint_poem_20260319_233610.json  test_custom_endpoint_poem_20260320_000055.json  test_custom_endpoint_poem_20260320_000315.json  test_model_switching_claude-4.5-sonnet_20260320_000252.json  test_model_switching_gpt-4o-mini_20260319_233520.json  test_model_switching_gpt-4o-mini_20260319_233610.json  test_model_switching_gpt-4o-mini_20260320_000036.json  test_simple_generate_20260319_233519.json  test_simple_generate_20260319_233610.json  test_simple_generate_20260319_233852.json  test_simple_generate_20260319_235155.json  test_simple_generate_20260319_235608.json  test_simple_generate_20260319_235649.json  test_simple_generate_20260319_235732.json  test_simple_generate_20260319_235827.json  test_simple_generate_20260320_000031.json  test_simple_generate_20260320_000247.json
docs/epics/: round-2-codeact-ast-epic.md
docs/superpowers/specs/: 2026-03-19-agent-http-layer-design.md
docs/visual-explainers/: project-recap.html  project-recap.md
examples/: sse_client_example.py  sse_server_example.py
src/petals/: data_structures.py
src/petals/client/: __init__.py  agent.py  config.py  context_manager.py  data_structures.py  http_client.py  (+11 more)
tests/: conftest.py  test_async_streaming.py  test_codeact_parser.py  test_dag.py  test_e2e_dag_orchestration.py  test_e2e_providers.py  test_feedback_loop.py  test_protocol_switching.py  test_providers.py  test_quick_protocols.py  test_resilience.py  test_tool_calling_llm.py  test_verification.py
tests/client/: __init__.py  conftest.py  test_agent_orchestrator.py  test_context_manager.py  test_orchestrator.py  test_tool_executor.py  test_tool_parser.py  test_tool_registry.py
tests/data_structures/: __init__.py  test_agent_state.py  test_context_window.py  test_tool_call.py
tests/e2e/: test_http_client_e2e.py
tests/mocks/: __init__.py  mock_llm_servers.py
(+45 files in other folders)
