[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "petals"
version = "2.3.0.dev2"
description = "Easy way to efficiently run 100B+ language models without high-end GPUs"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Petals Developers", email = "petals-devs@googlegroups.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch>=1.12",
    "bitsandbytes==0.41.1",
    "accelerate>=0.27.2",
    "huggingface-hub>=0.11.1,<1.0.0",
    "tokenizers>=0.13.3",
    "transformers==4.43.1",
    "speedtest-cli==2.1.3",
    "hivemind @ git+https://github.com/learning-at-home/hivemind.git",
    "tensor_parallel==1.0.23",
    "humanfriendly",
    "async-timeout>=4.0.2",
    "cpufeature>=0.2.0; platform_machine=='x86_64'",
    "packaging>=20.9",
    "sentencepiece>=0.1.99",
    "peft==0.8.2",
    "safetensors>=0.3.1",
    "Dijkstar>=2.6.0",
    "numpy<2",
    "protobuf>=6.31.1,<7.0.0",
    "uvloop>=0.17.0",
    "msgpack>=1.0.0",
    "pyyaml>=5.4.1",
    "scipy>=1.2.1",
    "prefetch-generator>=1.0.1",
    "sortedcontainers",
    "grpcio-tools>=1.33.2",
    "configargparse>=1.2.3",
    "py-multihash>=0.2.3",
    "cryptography>=3.4.6",
    "pydantic>=2.0.0",
    "varint>=1.0.2",
    "base58>=1.0.2",
    "netaddr>=1.3.0",
    "py-cid>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==6.2.5",
    "pytest-forked",
    "pytest-asyncio==0.16.0",
    "black==22.3.0",
    "isort==5.10.1",
    "psutil",
]

[project.urls]
"Bug Tracker" = "https://github.com/bigscience-workshop/petals/issues"
Homepage = "https://github.com/bigscience-workshop/petals"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
required-version = "22.3.0"

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true
combine_star = true
known_local_folder = ["tests", "cli"]
known_first_party = ["test_utils"]
